--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
     "tsx": false,
     "tailwind": {
         "config": "",
-        "css": "src/app/styles/global.css",
+        "css": "src/app/styles/app.css",
         "baseColor": "neutral",
         "cssVariables": true,
         "prefix": ""
